--- a/index.html
+++ b/index.html
@@ -59,10 +59,12 @@
     <h4 class="login">Login</h4>
 
     <section class="form">
-        <label class="user" for="mail">username or email address</label><br>
-        <input type="text" class="details" placeholder=""><br>
-        <label class="user" for="pass">password</label><br>
-        <input type="text" class="details" placeholder=""><br>
+        <div class="act">
+            <label class="user" for="mail">username or email address</label><br></div>
+        <input type="text" class="details" placeholder="@gmail.com"><br>
+        <div class="act"><label class="user" for="pass">password</label><br></div>
+
+        <input type="text" class="details" placeholder="*****"><br>
         <div class="remember-box">
 
             <div class="remember-me"><label class="remember">Remember me <span class="pass">forgot password?</span></label>
