--- a/index.html
+++ b/index.html
@@ -133,13 +133,12 @@
                 </div>
                 <div class="col-md-4 ">
                     <div class="icons">
-                        <i class="fab fa-instagram"></i>
+                        <a href="#"><i class="fab fa-instagram"></a></i>
 
-                        <i class="fab fa-facebook"></i>
 
-                        <i class="fab fa-twitter"></i>
+                        <a href="#"> <i class="fab fa-twitter"></a></i>
 
-                        <i class="fab fa-linkedin"></i>
+                        <a href="#"> <i class="fab fa-linkedin"></a></i>
                     </div>
                 </div>
 
