--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
         <button class="btn2"><a href="#">Login with Google</a></button>
-        <p class="signup">Don't have an account? <span><a href="#"> Sign up</a></span></p>
+        <p class="signup">Don't have an account? <span class="signups"><a href="#"> Sign up</a></span></p>
 
         <!--FOOTER SECTION MARKUP-->
     </section>
